@@ -1,6 +1,6 @@
 {
   "name": "simp-auditd",
-  "version": "7.1.1",
+  "version": "7.1.2",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing auditd and audispd",
   "license": "Apache-2.0",
@@ -49,8 +49,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.7.0 < 5.0.0"
+      "version_requirement": ">= 4.7.0 < 6.0.0"
     }
-  ],
-  "data_provider": "hiera"
+  ]
 }
