@@ -1,3 +1,6 @@
+* Mon Nov 13 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.2-0
+- /var/log/faillock should be tagged under 'login'
+
 * Thu Aug 31 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.1-0
 - Adjust audit.rules mode per inspec testing
 
